@@ -8,6 +8,8 @@ Changes in openair 1.0-0 [2013-11-21]
 *	Fix importKCL where dates were filled if two non contiguous
 	years were chosen
 *	Refine scaling of ws in polarPlot when upper is set
+*	Fix bug when type = "weekday" but not all days of the week
+	are present
 
 Changes in openair 0.9-0 [2013-02-13]
 =====================================
